Changed to control entity (CER) generation by a document charset, bug 65324, r=jst, sr=vidur.