content/base/src/nsXMLContentSerializer.h
@@ -37,7 +37,8 @@ class nsXMLContentSerializer : public nsIContentSerializer {
 
   NS_DECL_ISUPPORTS
 
-  NS_IMETHOD Init(PRUint32 flags, PRUint32 aWrapColumn);
+  NS_IMETHOD Init(PRUint32 flags, PRUint32 aWrapColumn,
+                  nsIAtom* aCharSet);
 
   NS_IMETHOD AppendText(nsIDOMText* aText, PRInt32 aStartOffset,
                         PRInt32 aEndOffset, nsAWritableString& aStr);
