layout/base/src/nsPlainTextSerializer.h
@@ -47,7 +47,8 @@ public:
   NS_DECL_ISUPPORTS
 
   // nsIContentSerializer
-  NS_IMETHOD Init(PRUint32 flags, PRUint32 aWrapColumn);
+  NS_IMETHOD Init(PRUint32 flags, PRUint32 aWrapColumn,
+                  nsIAtom* aCharSet);
 
   NS_IMETHOD AppendText(nsIDOMText* aText, PRInt32 aStartOffset,
                         PRInt32 aEndOffset, nsAWritableString& aStr);
