layout/base/src/nsXMLContentSerializer.cpp
@@ -66,7 +66,8 @@ nsXMLContentSerializer::~nsXMLContentSerializer()
 NS_IMPL_ISUPPORTS1(nsXMLContentSerializer, nsIContentSerializer)
 
 NS_IMETHODIMP 
-nsXMLContentSerializer::Init(PRUint32 flags, PRUint32 aWrapColumn)
+nsXMLContentSerializer::Init(PRUint32 flags, PRUint32 aWrapColumn,
+                             nsIAtom* aCharSet)
 {
   return NS_OK;
 }
